[package]
name = "pallet-custom-signatures"
version = "4.5.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network/"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "FRAME pallet for user defined extrinsic signatures"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
scale-info = { version = "2.1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.106", features = ["derive"], optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
libsecp256k1 = "0.7.0"
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
