[package]
name = "pallet-dapps-staking"
version = "3.6.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
homepage = "https://astar.network/"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "FRAME pallet to staking for dapps"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
num-traits = { version = "0.2", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
scale-info = { version = "2.1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.106", features = ["derive"], optional = true }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.24', default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"num-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"sp-staking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
