[package]
name = "pallet-dapps-staking"
version = "3.9.0"
description = "FRAME pallet to staking for dapps"
license = "PolyForm-Noncommercial-1.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true, package = "parity-scale-codec", features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
num-traits = { workspace = true }
pallet-balances = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"num-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"sp-staking/std",
	"frame-benchmarking?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
