[package]
name = "pallet-account"
authors = ["Stake Technologies"]
edition = "2021"
version = "0.1.0"

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
assert_matches = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
