[package]
name = "pallet-xcm-transactor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
num_enum = { version = "0.6", default-features = false }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# substrate core
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# frame dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# pallets
pallet-contracts = { workspace = true }
pallet-xcm = { workspace = true }

# xcm
xcm = { workspace = true }
xcm-executor = { workspace = true }

# types
xcm-ce-primitives = { path = "./primitives", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-timestamp = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
xcm-builder = { workspace = true, features = ["std", "runtime-benchmarks"] }

[features]
default = ["std", "runtime-benchmarks"]
std = [
	"num_enum/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"xcm/std",
	"xcm-executor/std",
	"pallet-xcm/std",
	"pallet-contracts/std",
	"xcm-ce-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-xcm/try-runtime",
	"pallet-contracts/try-runtime",
]
