[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-xcm"
version = "0.9.28"

[dependencies]
codec = { workspace = true, package = "parity-scale-codec", features = ["derive"] }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

xcm = { workspace = true }
xcm-executor = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
sp-io = { workspace = true }
xcm-builder = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
