[package]
name = "pallet-precompile-dapps-staking"
version = "3.6.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "dApps Staking EVM precompiles"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
precompile-utils = { path = "../utils", default-features = false }
scale-info = { version = "2.1.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

# Astar
pallet-dapps-staking = { path = "../../frame/dapps-staking", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.24", default-features = false }
pallet-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.24", default-features = false }

[dev-dependencies]
derive_more = "0.99"
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
precompile-utils = { path = "../utils", features = ["testing"] }
serde = "1.0.100"
sha3 = "0.10.1"
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-dapps-staking/std",
	"pallet-evm/std",
	"precompile-utils/std",
]
