[package]
name = "pallet-evm-precompile-substrate-ecdsa"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "Substrate ECDSA crypto support for EVM."
edition = "2021"
version = "1.2.0"

[dependencies]
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.24", default-features = false }
pallet-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.24", default-features = false }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
scale-info = "2.0"
serde = "1.0.100"

precompile-utils = { path = "../utils", features = ["testing"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
default = ["std"]
std = [
	"num_enum/std",
	"codec/std",
	"fp-evm/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
]
